munculkan email kembali

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                     </h1>
                     <div class="subheading mb-5">
                         Rusunawa Rorotan Tower C · Jakarta Utara, 14140 · 0895-3377-57360 ·
-                        <!-- <a href="mailto:name@email.com">taufik96.th@gmail.com</a> -->
+                        <a href="mailto:name@email.com">taufik96.th@gmail.com</a>
                     </div>
                     <p class="lead mb-5">Saya berpengalaman dibidang Administrasi Perusahaan Logistic dan saya juga mampu mengoperasikan System SAP dan Mengelola Laporan dengan baik. Mempunyai tekad yg kuat untuk belajar hal-hal baru serta menjunjung tinggi rasa Jujur dan Disiplin.</p>
                     <div class="social-icons">
